# lithium-next

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  task_serialization_patch.md  task_serialization_summary.md  task_usage_guide.md
example/: CMakeLists.txt  asi_camera_modular_example.cpp  asi_filterwheel_modular_example.cpp  camera_advanced_example.cpp  camera_usage_example.cpp  enhanced_device_management_example.cpp  indi_camera_modular_example.cpp  indi_telescope_modular_example.cpp  integrated_sequence_example.cpp  optimized_alpaca_example.cpp  optimized_elf_example.cpp  sequence_template_example.cpp  telescope_alignment_example.cpp  telescope_modular_example.cpp
example/components/: CMakeLists.txt  example1.cpp  main.cpp  package.json
example/config/: main.cpp
example/plugins/: CMakeLists.txt  example_plugin.cpp
example/python_scripts/: example_exports.py  lithium_manifest.json
example/task/: main.cpp
modules/: CMakeLists.txt
modules/device/filterwheel/: efw.cpp  efw.hpp
modules/device/focuser/: eaf.cpp  eaf.hpp
modules/image/: CMakeLists.txt
modules/tools/: Cargo.toml
src/: CMakeLists.txt  app.cpp
src/client/: CMakeLists.txt
src/components/: CMakeLists.txt  README.md  components.hpp  dependency.cpp  dependency.hpp  loader.cpp  loader.hpp  manager.cpp  manager.hpp  module.hpp  system_dependency.cpp  system_dependency.hpp  tracker.cpp  tracker.hpp  version.cpp  version.hpp
src/config/: CMakeLists.txt  README.md  config.hpp  config_cache.cpp  config_cache.hpp  config_serializer.cpp  config_serializer.hpp  config_validator.cpp  config_validator.hpp  config_watcher.cpp  config_watcher.hpp  configor.cpp  configor.hpp  configor_macro.hpp  json5.hpp
src/constant/: constant.hpp
src/database/: CMakeLists.txt  database.hpp  orm.cpp  orm.hpp
src/debug/: CMakeLists.txt  check.cpp  check.hpp  debug.hpp  suggestion.cpp  suggestion.hpp  terminal.cpp  terminal.hpp
src/device/: CMakeLists.txt  DeviceConfig.cmake  camera_factory.cpp  camera_factory.hpp  device.hpp  device_cache_system.hpp  device_config.hpp  device_configuration_manager.hpp  device_connection_pool.cpp  device_connection_pool.hpp  device_factory.cpp  device_factory.hpp  device_integration_test.cpp  device_interface.hpp  device_performance_monitor.cpp  device_performance_monitor.hpp  device_resource_manager.hpp  device_state_manager.hpp  device_task_scheduler.hpp  enhanced_device_factory.hpp  integrated_device_manager.cpp  integrated_device_manager.hpp  manager.cpp  manager.hpp
src/exception/: exception.hpp
src/logging/: CMakeLists.txt  log_exporter.hpp  log_statistics.cpp  log_statistics.hpp  logger_registry.hpp  logging.hpp  logging_manager.cpp  logging_manager.hpp  types.cpp  types.hpp
src/script/: CMakeLists.txt  check.cpp  check.hpp  interpreter_pool.cpp  interpreter_pool.hpp  python_caller.cpp  python_caller.hpp  script.hpp  script_export.cpp  script_export.hpp  script_service.cpp  script_service.hpp  sheller.cpp  sheller.hpp
src/server/: CMakeLists.txt  README.md  app.hpp  command.cpp  command.hpp  eventloop.cpp  eventloop.hpp  main.cpp  main_server.hpp  middleware.hpp  rate_limiter.cpp  rate_limiter.hpp  task_manager.cpp  task_manager.hpp  websocket.cpp  websocket.hpp
src/task/: CMakeLists.txt  README.md  api_adapter.cpp  api_adapter.hpp  astro_types.hpp  exception.hpp  generator.cpp  generator.hpp  imagepath.cpp  imagepath.hpp  integration_utils.cpp  integration_utils.hpp  lithium_task.hpp  registration.cpp  registration.hpp  sequence_manager.cpp  sequence_manager.hpp  sequencer.cpp  sequencer.hpp  sequencer_template.cpp  target.cpp  target.hpp  task.cpp  task.hpp  task_camera.cpp  task_camera.hpp  task_celestial_search.cpp  task_celestial_search.hpp  task_combined_config_utility.cpp  task_combined_config_utility.hpp  task_combined_script_celestial.cpp  task_combined_script_celestial.hpp  task_config_management.cpp  task_config_management.hpp  task_script.cpp  task_script.hpp  task_utility.cpp  task_utility.hpp
src/tools/: CMakeLists.txt  README.md  calculate.cpp  calculate.hpp  constant.hpp  convert.cpp  convert.hpp  croods.cpp  croods.hpp  format.hpp  solverutils.cpp  solverutils.hpp  tools.hpp
src/utils/: CMakeLists.txt  format.hpp  macro.hpp
tests/client/: CMakeLists.txt
tests/components/: CMakeLists.txt  README.md  test_dependency.cpp  test_loader.cpp  test_manager.cpp  test_tracker.hpp  test_version.cpp
tests/config/: CMakeLists.txt  test_config.cpp  test_configor.cpp
tests/database/: CMakeLists.txt  test_cache_manager.cpp  test_database_core.cpp  test_orm.cpp  test_query_builder.cpp  test_statement.cpp  test_transaction.cpp
tests/debug/: CMakeLists.txt  test_check.cpp  test_check_comprehensive.cpp  test_runner.cpp  test_suggestion.cpp  test_suggestion_comprehensive.cpp  test_terminal.cpp  test_terminal_components.cpp  test_terminal_comprehensive.cpp  unified_tests.cpp  unified_tests.hpp
tests/device/: CMakeLists.txt  test_device_manager.cpp
tests/logging/: CMakeLists.txt  test_log_exporter.cpp  test_log_statistics.cpp  test_logger_registry.cpp  test_logging_manager.cpp  test_types.cpp
tests/script/: CMakeLists.txt  test_check.cpp  test_check_enhanced.cpp  test_interpreter_pool.cpp  test_python_caller.hpp  test_script_export.cpp  test_script_service.cpp  test_sheller.cpp  test_sheller_enhanced.cpp  test_tool_registry.cpp
tests/server/: CMakeLists.txt  test_command.cpp  test_device_manager_commands.cpp  test_eventloop.cpp  test_rate_limiter.cpp  test_task_manager.cpp  test_websocket.cpp
tests/task/: CMakeLists.txt  camera_task_system_test.cpp  test_enhanced_system.cpp  test_generator.cpp  test_imagepath.cpp  test_script_task.cpp  test_sequence_manager.cpp  test_target.cpp  test_task.cpp
tests/tools/: CMakeLists.txt  test_astronomy_constants.cpp  test_calculate.cpp  test_convert.cpp  test_croods.cpp  test_libastro.cpp  test_solverutils.cpp
(+1844 files in other folders)
