[project]
name = "lithium-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "cryptography>=45.0.4",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "pybind11>=2.13.6",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "termcolor>=3.1.0",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
