[project]
name = "lithium-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.4",
    "loguru>=0.7.3",
    "pybind11>=2.13.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
]
