[package]
name = "rcomp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
flate2 = "1.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11.6"
zip = { version = "2.2.2", features = ["aes-crypto"] }
tar = "0.4"
bzip2 = "0.5.0"
xz2 = "0.1"
walkdir = "2.3"
regex = "1.5"
aes = "0.8"
block-modes = "0.9"
pbkdf2 = "0.12.2"
sha2 = "0.10"
rust-crypto = "0.2.36"
